# capiTest

./: CMakeLists.txt  README.md
Server/: CMakeLists.txt
Server/src/: capiTestServer.cpp
Server/src-gen/: CMakeLists.txt  generate.sh
fidl/tests/: capiTest-16x.fidl  capiTest-1x.fidl  capiTest-2x.fidl  capiTest-32x.fidl  capiTest-4x.fidl  capiTest-8x.fidl
